# lightmetrica-v3

./: .gitignore  CMakeLists.txt
include/lm/: accel.h  light.h  parallel.h  parallelcontext.h  path.h  scene.h  scheduler.h  stats.h
plugin/: CMakeLists.txt
plugin/accel_embree/: CMakeLists.txt  accel_embree_knn.cpp  embree_params.h
plugin/arepoloader/: CMakeLists.txt  arepoloader.cpp  arepoloader.h  lightscene.cpp  medium_het_arepo.cpp  mesh_arepo.cpp  pluecker.h  py_arepoloader.cpp  renderer_arepo_preprocess.cpp  renderer_arepo_vrls.cpp  renderer_tetra_based.cpp  renderer_volpt_arepo.cpp  statstags.h
src/: pylm.cpp  scene.cpp  scheduler.cpp
src/light/: light_point.cpp
src/parallel/: parallel.cpp  parallel_openmp.cpp
src/renderer/: renderer_pt.cpp
src/volume/: volume_gaussian.cpp  volume_multi.cpp  volume_sphere.cpp
test/: CMakeLists.txt
